# chimege_tts

./: .gitignore  README.md  TextToSpeech.ipynb  download_mbspeech.py  hello.py  prepare_metadata.py  pyproject.toml
demo/bible_demo/: Hun_turuluhtun.txt  MB210-0048.txt  Modnii_navchis.txt
demo/zer_zevseg/: Farewell00.txt
